<resources>
    <string name="app_name">Music Player</string>
    <string name="app_nameLabel">Music Player</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorites_btn">Favorites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="Song_name">Song Name</string>
    <string name="back_btn">Back</string>

    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>


    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>


    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \n world of Music</string>

    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="Exit">Exit</string>


    <string name="song_album">Song Album</string>

    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="min_60">60 minutes</string>

    <string name="search_view">Search...</string>

    <string name="song_img">Song Image</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="playlist_delete">Delete</string>

    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>

    <string name="search_song">Search Song</string>

    <string name="topic_feedback">Topic i.e. Suggetion,Error, etc.</string>

    <string name="email_feedback">Email Address(optional)</string>
    <string name="send">Send</string>

</resources>