<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navSettingsaaa"
        android:title=""

        />

    <item android:id="@+id/navFeedback"
        android:title="@string/feedback"
        android:icon="@drawable/feedback_icon"
        />

    <item android:id="@+id/navSettings"
        android:title=""

        />

    <item android:id="@+id/navAbout"
        android:title="@string/about"
        android:icon="@drawable/about_icon"/>


    <item android:id="@+id/navSettingsss"
        android:title=""

        />

    <item android:id="@+id/navExit"
        android:title="@string/Exit"
        android:icon="@drawable/exit_icon"/>
</menu>

<!--<item android:id="@+id/navSettings"-->
<!--android:title="@string/settings"-->
<!--android:icon="@drawable/settings_icon"-->
<!--    />-->