<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"

    app:strokeWidth="5dp"
    android:padding="1dp"
    app:strokeColor="@color/cool_pink"
    android:backgroundTint="#000000"
    android:layout_margin="10dp"
    >
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"

        android:layout_width="170dp"
        android:layout_height="130dp"
        android:src="@drawable/splash_screen"
        app:shapeAppearanceOverlay="@style/curved"
        android:contentDescription="@string/song_img"/>
    <TextView

        android:id="@+id/playlistName"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/playlist_name"
        android:contentDescription="@string/playlist_name"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:gravity="center"
        android:layout_marginTop="130dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"/>
    <ImageButton

        android:id="@+id/playlistDeleteBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/delete_icon"
        app:tint="@color/cool_pink"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="130dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/playlist_delete"/>

</com.google.android.material.card.MaterialCardView>