<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:padding="10dp"

    tools:context=".FeedbackActivity">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/emailFA"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:gravity="center |start"
        android:hint="@string/email_feedback"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.204" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/topicFA"
        android:layout_width="330dp"
        android:layout_height="56dp"
        android:gravity="center |start"
        android:hint="@string/topic_feedback"
        android:inputType="textEmailSubject"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.328" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/feedbackMsgFA"
        android:layout_width="328dp"
        android:layout_height="231dp"
        android:gravity="center |start"
        android:hint="@string/topic_feedback"
        android:inputType="textLongMessage"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.646" />

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="15dp"
        android:id="@+id/sendFA"
        android:layout_width="86dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:text="@string/send"

        android:gravity="center"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/feedbackMsgFA"
        app:layout_constraintTop_toBottomOf="@id/feedbackMsgFA"/>

    <com.google.android.material.button.MaterialButton
        app:cornerRadius="15dp"
        android:id="@+id/backFA"
        android:layout_width="86dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/back_btn"
        android:layout_marginTop="60dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/feedbackMsgFA"
        app:layout_constraintTop_toBottomOf="@id/feedbackMsgFA" />

</androidx.constraintlayout.widget.ConstraintLayout>