<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">

    <LinearLayout
        android:layout_marginTop="100dp"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="7dp"
        >

        <ImageButton
            android:id="@+id/backBtnPD"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/back_icon" />

        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlist_btn"
            android:gravity="center"
            android:text="@string/playlist_btn"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="2dp"
        android:id="@+id/linearLayoutDetails"
        android:layout_width="match_parent"
        android:layout_height="120dp"

        android:orientation="horizontal"
        android:padding="1dp"
        tools:layout_editor_absoluteY="56dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:padding="5dp"

            android:id="@+id/playlistImgPD"
            android:layout_width="200sp"
            android:layout_height="match_parent"
            android:layout_marginRight="20dp"
            android:src="@drawable/splash_screen" />

        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:padding="10dp"
            android:gravity="start"

            android:text="@string/playlist_name"
            android:textSize="12dp"

            android:textStyle="bold"
          />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/playlistDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="3dp"
        android:paddingBottom="40dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar_icon"
        android:scrollbars="vertical"
        tools:layout_editor_absoluteY="219dp" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/shuffleBtnPD"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:icon="@drawable/suffle_icon"
        app:iconSize="35sp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        android:layout_gravity="end"
        android:scrollbars="vertical"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="275dp"
        tools:layout_editor_absoluteY="511dp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:backgroundTint="@android:color/transparent"
        android:layout_marginBottom="3dp"
        tools:layout_editor_absoluteY="567dp">

        <Button
            android:id="@+id/addBtnPD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:contentDescription="@string/add_song"
            android:drawableLeft="@drawable/ic_baseline_add_24"
            android:text="@string/add_song"
            android:textAllCaps="false"

            android:textStyle="bold"
            />



        <Button
            android:id="@+id/removeBtnPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/remove_all"
            android:drawableLeft="@drawable/remove_icon"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"

            />


    </LinearLayout>

</LinearLayout>