<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            android:layout_margin="8dp"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/min_15"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_15"
            android:scrollbarSize="18sp"
            android:textColor="@color/black"
            android:padding="8sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            android:layout_margin="8dp"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/min_30"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_30"
            android:scrollbarSize="18sp"
            android:textColor="@color/black"
            android:padding="8sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer_icon"
            android:layout_margin="8dp"
            app:tint="@color/cool_pink"
            android:contentDescription="@string/min_60"/>
        <TextView
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min_60"
            android:scrollbarSize="18sp"
            android:textColor="@color/black"
            android:padding="8sp"/>
    </LinearLayout>

</LinearLayout>